--- a/index.html
+++ b/index.html
@@ -128,20 +128,9 @@ Stap 4) Kauw door het mergpijpje. Je hebt nu de techniek afgerond.</p>
 <h2>Rijk Brouns is een ongelofelijke smikkelbeer hap hap hap</h2>
 <img src=https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r6691694769137436610&th=17cf001236d08b3f&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-1No-lpki-mkRlxtIYk6SGD-kw-aHREQml1lEGGbEM_xngGIDkDsExAM8aoYU36tJjmgBMoo3A9yeWZg9j3NfR4PdHP2VekO03_D6Hc2swwUnCG0FqcOZZt2c&disp=emb&realattid=ii_kvmc4vks0> 
 <img src=https://cdn.discordapp.com/attachments/881007463887941703/906104229817647145/unknown.png> <h5> dat zal lekker smaken </h5>
-<script>
-function openCity(evt, cityName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-</script>
+
+<p>Klik hier om meer over de techniek te weten te komen.</p>
+<a href="index2.html"><img src="smiley.gif" alt="De Techniek" style="width:42px;height:42px;"></a>
+    
 </body>
 </html> 
