--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ tr:nth-child(even) {
 </p>
 </div>
 <p>Klik hier om meer te weten te komen.</p>
-<a href="index2.html"><img src="smiley.gif" alt="De Techniek" style="width:42px;height:42px;"></a>
-<a href="index2.html"><img src="smiley.gif" alt="Interviews" style="width:42px;height:42px;"></a>
-<a href="index2.html"><img src="smiley.gif" alt="Reviews" style="width:42px;height:42px;"></a>
-<a href="index2.html"><img src="smiley.gif" alt="Slot" style="width:42px;height:42px;"></a>
+<a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629us30" alt="De Techniek" style="width:250px"></a> <b>
+<a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.2&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usr2" alt="Interviews" style="width:250px"></a><b>
+<a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.3&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usg1" alt="Reviews" style="width:250px"></a><b>
+<a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.4&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629ut13" alt="Slot" style="width:250px"></a><b>
 </body>
 </html>
