--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ tr:nth-child(even) {
 <h2>Inleiding</h2>
   <p>In deze site kom je te weten te komen hoe je een mergpijpje in een hap in je mond krijgt. Natuurlijk is de menselijke mond groot genoog om een heel mergpijpje er in te stoppen, dat weten we allemaal. Maar er is een bepaalde techniek voor die alleen professionelen zoals onze Bo Kammerling gebruiken. <br> 
 <img width=250 src=https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8182057176762406669&th=17ceab712f112bf2&view=att&disp=safe&realattid=17ceab6f7ec11cbea011> <br>
-<h5> Bo Kammerling, op de avond van 30 oktober 2021<h5>
+<h5> Bo Kammerling, op de avond van 30 oktober 2021</h5>
 </p>
 </div>
 <p>Klik hier om meer te weten te komen.</p>
