--- a/index5.html
+++ b/index5.html
@@ -1,3 +1,27 @@
+<!DOCTYPE HTML>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<style>
+body {
+  background-image: url('https://images.squarespace-cdn.com/content/v1/557ca393e4b020deb8dff2a3/1443222490575-YYUA5F0PTJKZ3B3GHGJP/1893488.jpg');
+background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+table {
+  font-family: Futura, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
   <h2>Slot</h2>
   <p>Tot slot ga ik zelf een mergpijpje volgens deze techniek innemen.</p>
