--- a/index2.html
+++ b/index2.html
@@ -41,6 +41,7 @@ Stap 3) Vouw het mergpijpje zodat het ook je linker mondholte vult. <br>
 Stap 4) Kauw door het mergpijpje. Je hebt nu de techniek afgerond.</p> 
 <img width=400 src=https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-4068347563878225775&th=17d32a4daf1e2092&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_5iKHBQdm-NYVJgjgLU3VzgggedFdErNYLN7orHN_57yLT-z2GpJvZnSul7cUJ_L_bb8IZj7KsAiPGoyackjUheg9VTuK9ZRzGoaDRy2CPsImMWwz9cCGJD8U&disp=emb&realattid=ii_kw4trwfn0?width=400&height=670>
 <p>Klik op de knoppen hieronder om meer te weten te komen.</p>
+<a href="index.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r2568784612638696454&th=17e67518e41856c7&view=att&disp=safe&realattid=f_kyih1k0u0" alt="Home" style="width:250px"></a><b>
 <a href="index3.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.3&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usg1" alt="Interviews" style="width:250px"></a><b>
 <a href="index4.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.2&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usr2" alt="Reviews" style="width:250px"></a><b>
 <a href="index5.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.4&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629ut13" alt="Slot" style="width:250px"></a><b>
