--- a/index3.html
+++ b/index3.html
@@ -51,6 +51,7 @@ tr:nth-child(even) {
 <h5>Hieruit kan ik concluderen dat de massa geen verstand heeft over het stijlvol innemen van mergpijpjes.</h5>
     
     <p>Klik op de knoppen hieronder om meer te weten te komen.</p>
+    <a href="index.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r2568784612638696454&th=17e67518e41856c7&view=att&disp=safe&realattid=f_kyih1k0u0" alt="Home" style="width:250px"></a> <b>
 <a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629us30" alt="De Techniek" style="width:250px"></a> <b>
 <a href="index4.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.2&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usr2" alt="Reviews" style="width:250px"></a><b>
 <a href="index5.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.4&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629ut13" alt="Slot" style="width:250px"></a><b>
