--- a/index5.html
+++ b/index5.html
@@ -22,10 +22,11 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
- <center><h2>Slot</h2>
+    </style>
+ <center><h1>Slot</h1>
   <p>Tot slot, deze informatie zal revolutionair zijn en zal de manier hoe we naar mergpijpjes kijken zeer veranderen... Vandaar dat ik hier ook aankondig, de zesde wereldreligie. DE MERGPIJPJESRELIGIE :O Heeft u door deze hele site gelezen? GEFELICITEERD, u bent nu volger van de pijpgoden. U kunt dit niet opzeggen.
   We bidden zes keer per dag, waarvan een keer midden in de nacht is dus zeg je slaap maar gedag. Je moet ook op de derde dinsdag van iedere maand een offer brengen naar de goden. Doet u dit niet, komen er zware gevolgen >:DDDDDDDDDDd<p></center>
-  </style>
+  </center>
 <p>Klik op de knoppen hieronder om meer te weten te komen.</p>
       <a href="index.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r2568784612638696454&th=17e67518e41856c7&view=att&disp=safe&realattid=f_kyih1k0u0" alt="Home" style="width:250px"></a> <b>
 <a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629us30" alt="De Techniek" style="width:250px"></a> <b>
