--- a/index.html
+++ b/index.html
@@ -1,71 +1,8 @@
-<!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE HTML>
+<html lang="nl">
 
-<style>
-body {
-  background-image: url('https://images.squarespace-cdn.com/content/v1/557ca393e4b020deb8dff2a3/1443222490575-YYUA5F0PTJKZ3B3GHGJP/1893488.jpg');
-background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #a0a0a0;
-}
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-.tab button:hover {
-  background-color: #b00b69;
-}
-.tab button.active {
-  background-color: #800844;
-}
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-table {
-  font-family: Futura, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-<link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/712688180935262262/907559079155744778/bruh.png?width=894&height=670">
-<head>
+<head> </head>
 <body>
-<font face="Futura">
-<h1><center>Het innemen van een Euro Patisserie reuzemergpijpje in een hap</center></h1>
-<p><center>Door Mikai Voets</center></p>
-<h2>Inleiding</h2>
-  <p>In deze site kom je te weten te komen hoe je een mergpijpje in een hap in je mond krijgt. Natuurlijk is de menselijke mond groot genoog om een heel mergpijpje er in te stoppen, dat weten we allemaal. Maar er is een bepaalde techniek voor die alleen professionelen zoals onze Bo Kammerling gebruiken. <br> 
-<img width=250 src=https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8182057176762406669&th=17ceab712f112bf2&view=att&disp=safe&realattid=17ceab6f7ec11cbea011> <br>
-<h5> Bo Kammerling, op de avond van 30 oktober 2021</h5>
-</p>
-</div>
-<p>Klik op de knoppen hieronder om meer te weten te komen.</p>
-<a href="index2.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.1&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629us30" alt="De Techniek" style="width:250px"></a> <b>
-<a href="index3.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.3&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usg1" alt="Interviews" style="width:250px"></a><b>
-<a href="index4.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.2&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629usr2" alt="Reviews" style="width:250px"></a><b>
-<a href="index5.html"><img src="https://mail.google.com/mail/u/2?ui=2&ik=d0ac8b506f&attid=0.4&permmsgid=msg-a:r-8262388261382579263&th=17db8d8412a7f34f&view=att&disp=safe&realattid=f_kx629ut13" alt="Slot" style="width:250px"></a><b>
+<h1>Shiiiit</h1>
 </body>
 </html>
