--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
 <meta CHARSET="UTF-8">
-<title>'s Werelds Grote Gids Naar de Discografie der Pink Floyd</title>
+<title>'s Werelds Grote Gids Naar de Discografie van Pink Floyd</title>
+<h1>'s Werelds Grote Gids Naar de Discografie van Pink Floyd</h1>
 <img src="https://us.123rf.com/450wm/dolgachov/dolgachov1503/dolgachov150300500/37106032-%ED%96%89%EB%B3%B5-%EC%A0%9C%EC%8A%A4%EC%B2%98-%EA%B0%90%EC%A0%95-%EB%B0%8F-%EC%82%AC%EB%9E%8C%EB%93%A4%EC%9D%B4-%EA%B0%9C%EB%85%90-%EC%A0%9C%EA%B8%B0-%EC%86%90%EC%9C%BC%EB%A1%9C-%ED%96%89%EB%B3%B5-laughing-%EB%82%A8%EC%9E%90.jpg?ver=6">
+<p style="background-image: url('https://media.discordapp.net/attachments/989268312036896818/1037324066283081738/cIover_pink_floyd_10e17e02-66c0-4652-9905-18cbca42cc21.png');">
 </head>
 <body>
   <h1>Goedenmiddag, als het middag is als je dit leest.</h1>
-<p>Hoi, hoe gaat het met u? Mijn naam is Benny Bladblazer. Vandaag zijt ik uw gids door de discorafie van Pink Floyd. <b> 
+<p>Hallo, hoe gaat het met u? Mijn naam is Benny Bladblazer. Vandaag ben ik uw gids door de discorafie van Pink Floyd.<b>
+Het  
 </body>
 </html>
