--- a/index.html
+++ b/index.html
@@ -1,16 +1,153 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="nl">
-
 <head>
-<meta CHARSET="UTF-8">
 <title>'s Werelds Grote Gids Naar de Discografie van Pink Floyd</title>
-<h1>'s Werelds Grote Gids Naar de Discografie van Pink Floyd</h1>
-<img src="https://us.123rf.com/450wm/dolgachov/dolgachov1503/dolgachov150300500/37106032-%ED%96%89%EB%B3%B5-%EC%A0%9C%EC%8A%A4%EC%B2%98-%EA%B0%90%EC%A0%95-%EB%B0%8F-%EC%82%AC%EB%9E%8C%EB%93%A4%EC%9D%B4-%EA%B0%9C%EB%85%90-%EC%A0%9C%EA%B8%B0-%EC%86%90%EC%9C%BC%EB%A1%9C-%ED%96%89%EB%B3%B5-laughing-%EB%82%A8%EC%9E%90.jpg?ver=6">
-<p style="background-image: url('https://media.discordapp.net/attachments/989268312036896818/1037324066283081738/cIover_pink_floyd_10e17e02-66c0-4652-9905-18cbca42cc21.png');">
+<meta CHARSET="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+margin: 0;
+  font-family: Calibri, sans-serif;
+background-image: url('https://media.discordapp.net/attachments/989268312036896818/1037324066283081738/cIover_pink_floyd_10e17e02-66c0-4652-9905-18cbca42cc21.png');
+}
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+header:hover {
+    color: red;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 30%;
+  height: 400px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 400px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
 </head>
 <body>
-  <h1>Goedenmiddag, als het middag is als je dit leest.</h1>
-<p>Hallo, hoe gaat het met u? Mijn naam is Benny Bladblazer. Vandaag ben ik uw gids door de discorafie van Pink Floyd.<b>
-Het  
+
+<h1 style="color:White;">'s Werelds Grote Gids Naar de Discografie van Pink Floyd</h1>
+<h3 style="color:White;">Goedenmiddag, als het middag is als u dit leest.</h3>
+<p style="color:White;">Hallo, hoe gaat het met u? Mijn naam is Benny Bladblazer. Vandaag ben ik uw gids door de discorafie van Pink Floyd.<b>
+
+<header>
+  <h2>Discografie</h2>
+</header>
+
+<div class="topnav">
+  <a class="active" href="#home">Studioalbums</a>
+  <a href="#news">Niet-uitgebrachte muziek</a>
+  <a href="#contact">Bandleden</a>
+  <a href="#about">Over ons en contact</a>
+</div>
+
+<section>
+
+  <nav>
+    <ul>
+      <li><a href="#">Piper at the Gates of Dawn</a></li>
+      <li><a href="#">A Saucerful of Secrets</a></li>
+      <li><a href="#">More</a></li>
+      <li><a href="#">Ummagumma</a></li>
+      <li><a href="#">Atom Heart Mother</a></li>
+      <li><a href="#">Meddle</a></li>
+      <li><a href="#">Obscured by Clouds</a></li>
+      <li><a href="#">The Dark Side of the Moon</a></li>
+      <li><a href="#">Wish You Were Here</a></li>
+      <li><a href="#">Animals</a></li>
+<li><a href="#">The Wall</a></li>
+      <li><a href="#">The Final Cut</a></li>
+<li><a href="#">A Momentary Lapse of Reason</a></li>
+      <li><a href="#">The Division Bell</a></li>
+<li><a href="#">Hiaat</a></li>
+<li><a href="#">The Endless River</a></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+
+<footer>
+  <p>VOETEN</p>
+</footer>
+
 </body>
 </html>
+
