--- a/index.html
+++ b/index.html
@@ -109,38 +109,37 @@ footer {
 
 <div class="topnav">
   <a class="active" href="#home">Studioalbums</a>
-  <a href="#news">Niet-uitgebrachte muziek</a>
-  <a href="#contact">Bandleden</a>
-  <a href="#about">Over ons en contact</a>
+  <a href="#unreleased">Niet-uitgebrachte muziek</a>
+  <a href="#band">Bandleden</a>
+  <a href="#contact">Over ons en contact</a>
 </div>
 
 <section>
 
   <nav>
     <ul>
-      <li><a href="#">Piper at the Gates of Dawn</a></li>
-      <li><a href="#">A Saucerful of Secrets</a></li>
-      <li><a href="#">More</a></li>
-      <li><a href="#">Ummagumma</a></li>
-      <li><a href="#">Atom Heart Mother</a></li>
-      <li><a href="#">Meddle</a></li>
-      <li><a href="#">Obscured by Clouds</a></li>
-      <li><a href="#">The Dark Side of the Moon</a></li>
-      <li><a href="#">Wish You Were Here</a></li>
-      <li><a href="#">Animals</a></li>
-<li><a href="#">The Wall</a></li>
-      <li><a href="#">The Final Cut</a></li>
-<li><a href="#">A Momentary Lapse of Reason</a></li>
-      <li><a href="#">The Division Bell</a></li>
-<li><a href="#">Hiaat</a></li>
-<li><a href="#">The Endless River</a></li>
+      <li><a href="#piper">The Piper at the Gates of Dawn</a></li>
+      <li><a href="#saucer">A Saucerful of Secrets</a></li>
+      <li><a href="#more">More</a></li>
+      <li><a href="#umma">Ummagumma</a></li>
+      <li><a href="#atom">Atom Heart Mother</a></li>
+      <li><a href="#meddle">Meddle</a></li>
+      <li><a href="#clouds">Obscured by Clouds</a></li>
+      <li><a href="#moon">The Dark Side of the Moon</a></li>
+      <li><a href="#wish">Wish You Were Here</a></li>
+      <li><a href="#animals">Animals</a></li>
+<li><a href="#wall">The Wall</a></li>
+      <li><a href="#cut">The Final Cut</a></li>
+<li><a href="#lapse">A Momentary Lapse of Reason</a></li>
+      <li><a href="#bell">The Division Bell</a></li>
+<li><a href="#hiatus">Hiaat</a></li>
+<li><a href="#river">The Endless River</a></li>
     </ul>
   </nav>
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>The Piper at the Gates of Dawn</h1>
+    <p>Uitgebracht in 1967, bracht het debuutalbum The Piper at the Gates of Dawn de band omhoog naar roem.</p>
   </article>
 </section>
 
@@ -150,4 +149,3 @@ footer {
 
 </body>
 </html>
-
