--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
 
 <div class="class">
 <h1 style="color:White;">'s Werelds Grote Gids Naar de Discografie van Pink Floyd</h1>
-<h3 style="color:White;">Goedenmiddag, als het middag is als u dit leest.</h3>
 
 <header>
   <h2>Discografie</h2>
@@ -28,7 +27,7 @@
 
 <section>
   <article>
-    <h4>Heeft u nog tips voor deze site of heeft u klachten? Mail dan naar een emailadres naar keuze.</h4>
+    <h4>Heeft u nog tips voor deze site of heeft u klachten? Mail dan naar een e-mailadres naar keuze.</h4>
     <h5></h5>
 </section>
  </article>
