--- a/unreleased.html
+++ b/unreleased.html
@@ -35,7 +35,7 @@
     <a target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Battersea_Power_Station_in_London.jpg/1280px-Battersea_Power_Station_in_London.jpg" alt="Forest" width="600" height="400">
     </a>
-    <div class="desc">Battersea Power Station staat op de omslagafbeelding van Animals</div>
+    <div class="desc">Battersea Power Station staat op de albumcover van Animals</div>
   </div>
 
   <div class="gallery">
