--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,17 @@
 
 <section>
   <article>
-    <h4>Heeft u nog tips voor deze site of heeft u klachten? Mail dan naar een e-mailadres naar keuze.</h4>
+    <h4>Heeft u nog tips voor deze site of heeft u klachten? Mail dan naar een e-mailadres naar keuze.
+    Email:  
+<input type="text" name="Name">  
+<br> <br>  
+      Betreft:  
+<input type="text" name="Course"> 
+    <br> <br>  
+Bericht:  
+<input type="text" name="Course">  </h4>
     <h5></h5>
+
 </section>
  </article>
 </section>
